added HW2 and HW3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,24 @@ add_executable(DSA
         "DSA2/HW1/H. Room area.cpp"
         "DSA2/HW1/I. Byte Radio.cpp"
         "DSA2/HW1/J. Landing troops.cpp"
+        "DSA2/HW2/A. Topological Sort.cpp"
+        "DSA2/HW2/B. Bridges.cpp"
+        "DSA2/HW2/C. Articulation points.cpp"
+        "DSA2/HW2/D. Graph сondensation.cpp"
+        "DSA2/HW2/E. One-Way traffic.cpp"
+        "DSA2/HW2/F. Parts production.cpp"
+        "DSA2/HW2/G. Apple from the apple tree.cpp"
+        "DSA2/HW2/H. Study groups in Mahovniki.cpp"
+        "DSA2/HW2/I. City in the Republic.cpp"
+        "DSA2/HW2/J. Prime Minister.cpp"
+        "DSA2/HW3/A. Shortest path length.cpp"
+        "DSA2/HW3/B. Path in a graph.cpp"
+        "DSA2/HW3/C. Spelunker's path.cpp"
+        "DSA2/HW3/D. Fleas.cpp"
+        "DSA2/HW3/E. Redundant edges.cpp"
+        "DSA2/HW3/F. Metro.cpp"
+        "DSA2/HW3/G. Toy Maze.cpp"
+        "DSA2/HW3/H. Max and Pourings.cpp"
+        "DSA2/HW3/I. Tsar Leonid on a tractor.cpp"
+        "DSA2/HW3/J. Robots.cpp"
 )
