--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,4 +37,14 @@ add_executable(DSA
         "DSA2/HW3/H. Max and Pourings.cpp"
         "DSA2/HW3/I. Tsar Leonid on a tractor.cpp"
         "DSA2/HW3/J. Robots.cpp"
+        "DSA2/HW4/A. Dijkstra.cpp"
+        "DSA2/HW4/B. Dijkstra with path reconstruction.cpp"
+        "DSA2/HW4/C. Fast Dijkstra.cpp"
+        "DSA2/HW4/D. Shortest path.cpp"
+        "DSA2/HW4/E. Alchemy Olympiad.cpp"
+        "DSA2/HW4/F. Buses in Vasyuki.cpp"
+        "DSA2/HW4/G. Riding City.cpp"
+        "DSA2/HW4/H. Transportation.cpp"
+        "DSA2/HW4/I. By Sled.cpp"
+        "DSA2/HW4/J. File manager.cpp"
 )
