--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,4 +47,14 @@ add_executable(DSA
         "DSA2/HW4/H. Transportation.cpp"
         "DSA2/HW4/I. By Sled.cpp"
         "DSA2/HW4/J. File manager.cpp"
+        "DSA2/HW5/A. Transitive Closure.cpp"
+        "DSA2/HW5/B. Is there a cycle?.cpp"
+        "DSA2/HW5/C. Floyd.cpp"
+        "DSA2/HW5/D. Dangerous Route.cpp"
+        "DSA2/HW5/E. The Longest Path.cpp"
+        "DSA2/HW5/F. Pink Floyd.cpp"
+        "DSA2/HW5/G. Ford-Bellman.cpp"
+        "DSA2/HW5/H. Timed Flights.cpp"
+        "DSA2/HW5/I. Negative Weight Cycle.cpp"
+        "DSA2/HW5/J. Labyrinth of Knowledge.cpp"
 )
